--- a/index.html
+++ b/index.html
@@ -10,28 +10,103 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            background: white;
+            background: #f1f1f1;
             font-family: Arial, sans-serif;
+            position: relative;
+            overflow: hidden;
         }
+
+        .logo-container {
+            position: relative;
+            z-index: 2;
+        }
+
         img {
             max-width: 90%;
-            border: 2px solid #000;
             padding: 20px;
+            position: relative;
+            background: white;
+            box-shadow: 0 0 30px rgba(0,0,0,0.1);
         }
+
+        /* Mercury Drip Effect */
+        .drip-effect {
+            position: absolute;
+            width: 150%;
+            height: 150%;
+            top: -25%;
+            left: -25%;
+            background: linear-gradient(
+                45deg,
+                rgba(255,255,255,0.1) 0%,
+                rgba(255,255,255,0.3) 25%,
+                rgba(200,200,200,0.5) 50%,
+                rgba(255,255,255,0.3) 75%,
+                rgba(255,255,255,0.1) 100%
+            );
+            mask-image: radial-gradient(circle at 50% -50%, 
+                transparent 60%, 
+                black 65%);
+            -webkit-mask-image: radial-gradient(circle at 50% -50%, 
+                transparent 60%, 
+                black 65%);
+            animation: mercury-flow 8s infinite linear;
+            z-index: 1;
+        }
+
+        @keyframes mercury-flow {
+            0% { transform: translateY(-100%) rotate(5deg); }
+            100% { transform: translateY(100%) rotate(5deg); }
+        }
+
+        /* Chrome Reflection */
+        img::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(120deg,
+                rgba(255,255,255,0) 0%,
+                rgba(255,255,255,0.3) 50%,
+                rgba(255,255,255,0) 100%);
+            animation: chrome-shine 5s infinite;
+        }
+
+        @keyframes chrome-shine {
+            0% { transform: translateX(-100%); }
+            100% { transform: translateX(100%); }
+        }
+
         .contact {
             position: fixed;
             bottom: 20px;
             text-align: center;
+            z-index: 3;
         }
+
         a {
             color: black;
             text-decoration: none;
             font-size: 1.2rem;
+            position: relative;
+            padding: 5px 15px;
+            background: rgba(255,255,255,0.9);
+            transition: 0.3s;
+        }
+
+        a:hover {
+            background: black;
+            color: white;
         }
     </style>
 </head>
 <body>
-    <img src="https://i.ibb.co/xtJk2gk7/text-1739414566378.png" alt="ÆTHER">
+    <div class="drip-effect"></div>
+    <div class="logo-container">
+        <img src="https://i.ibb.co/xtJk2gK7/text-1739414566378.png" alt="ÆTHER">
+    </div>
     <div class="contact">
         <a href="mailto:booking@aetherlive.net">BOOKING@AETHERLIVE.NET</a>
     </div>
