--- a/index.html
+++ b/index.html
@@ -3,15 +3,122 @@
 <head>
     <title>ÆTHER</title>
     <style>
-        /* [Keep all previous CSS styles unchanged] */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: #0a0a0a;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-family: 'Arial', sans-serif;
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* Mercury Storm Effect */
+        .mercury-drips {
+            position: absolute;
+            width: 200%;
+            height: 200%;
+            animation: flow 18s linear infinite;
+            background: 
+                radial-gradient(circle at 20% 20%, 
+                    rgba(255,255,255,0.15) 0%, 
+                    transparent 30%),
+                linear-gradient(
+                    45deg,
+                    rgba(200,200,200,0.1) 0%,
+                    rgba(150,150,150,0.3) 50%,
+                    rgba(200,200,200,0.1) 100%
+                );
+            mask-image: 
+                radial-gradient(circle at 50% 50%, 
+                    black 40%, 
+                    transparent 60%);
+            filter: blur(3px) contrast(200%);
+            z-index: 1;
+        }
+
+        @keyframes flow {
+            0% { transform: translateY(-100%) rotate(10deg); }
+            100% { transform: translateY(100%) rotate(10deg); }
+        }
+
+        .logo-container {
+            position: relative;
+            z-index: 2;
+            max-width: 80vw;
+            filter: drop-shadow(0 0 20px rgba(255,255,255,0.1));
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+            border: 2px solid rgba(255,255,255,0.1);
+            background: rgba(0,0,0,0.5);
+            padding: 20px;
+            position: relative;
+        }
+
+        /* Chrome Liquid Effect */
+        img::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                120deg,
+                rgba(255,255,255,0) 0%,
+                rgba(255,255,255,0.4) 50%,
+                rgba(255,255,255,0) 100%
+            );
+            animation: shine 5s infinite;
+            mix-blend-mode: overlay;
+        }
+
+        @keyframes shine {
+            0% { transform: translateX(-100%) skew(-20deg); }
+            100% { transform: translateX(100%) skew(-20deg); }
+        }
+
+        .contact {
+            position: fixed;
+            bottom: 30px;
+            z-index: 3;
+        }
+
+        a {
+            color: rgba(255,255,255,0.8);
+            text-decoration: none;
+            font-size: 1.2rem;
+            padding: 10px 25px;
+            border: 1px solid rgba(255,255,255,0.2);
+            background: rgba(0,0,0,0.3);
+            transition: all 0.3s ease;
+        }
+
+        a:hover {
+            background: rgba(255,255,255,0.9);
+            color: #000;
+            border-color: transparent;
+        }
     </style>
 </head>
 <body>
-    <div class="drip-effect"></div>
+    <div class="mercury-drips"></div>
+    
     <div class="logo-container">
-        <!-- Updated image source -->
-        <img src="/text-1739414566378.png" alt="ÆTHER">
+        <!-- REPLACE WITH YOUR IMAGE URL -->
+        <img src="https://raw.githubusercontent.com/YOURUSERNAME/YOURREPO/main/text-1739414566378.png" alt="ÆTHER">
     </div>
+
     <div class="contact">
         <a href="mailto:booking@aetherlive.net">BOOKING@AETHERLIVE.NET</a>
     </div>
