--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     
     <div class="logo-container">
         <!-- REPLACE WITH YOUR IMAGE URL -->
-        <img src="https://raw.githubusercontent.com/YOURUSERNAME/YOURREPO/main/text-1739414566378.png" alt="ÆTHER">
+        <img src="https://raw.githubusercontent.com/AETHERLIVE/AETHERLIVE.GITHUB.AI/main/text-1739414566378.png" alt="ÆTHER">
     </div>
 
     <div class="contact">
