--- a/index.html
+++ b/index.html
@@ -20,72 +20,120 @@
             overflow: hidden;
         }
 
-        /* Mercury Storm Effect */
+        /* Enhanced 3D Mercury Effect */
         .mercury-drips {
             position: absolute;
-            width: 200%;
-            height: 200%;
-            animation: flow 18s linear infinite;
+            width: 300%;
+            height: 400%;
+            animation: flow 25s linear infinite;
             background: 
-                radial-gradient(circle at 20% 20%, 
-                    rgba(255,255,255,0.15) 0%, 
+                radial-gradient(circle at 10% 15%, 
+                    rgba(200,200,200,0.2) 0%, 
+                    transparent 25%),
+                radial-gradient(circle at 30% 40%, 
+                    rgba(180,180,180,0.15) 0%, 
                     transparent 30%),
+                radial-gradient(circle at 70% 25%, 
+                    rgba(220,220,220,0.25) 0%, 
+                    transparent 35%),
                 linear-gradient(
                     45deg,
-                    rgba(200,200,200,0.1) 0%,
-                    rgba(150,150,150,0.3) 50%,
-                    rgba(200,200,200,0.1) 100%
+                    rgba(150,150,150,0.05) 0%,
+                    rgba(100,100,100,0.2) 50%,
+                    rgba(150,150,150,0.05) 100%
                 );
             mask-image: 
                 radial-gradient(circle at 50% 50%, 
-                    black 40%, 
-                    transparent 60%);
-            filter: blur(3px) contrast(200%);
+                    black 25%,
+                    transparent 35%),
+                radial-gradient(circle at 80% 20%, 
+                    black 15%,
+                    transparent 25%),
+                linear-gradient(
+                    to bottom,
+                    transparent 40%,
+                    black 60%,
+                    transparent 80%
+                );
+            -webkit-mask-composite: source-in;
+            mask-composite: intersect;
+            filter: blur(2px) contrast(300%) brightness(1.2);
             z-index: 1;
+            mix-blend-mode: hard-light;
         }
 
         @keyframes flow {
-            0% { transform: translateY(-100%) rotate(10deg); }
-            100% { transform: translateY(100%) rotate(10deg); }
+            0% { transform: translateY(-150%) rotate(12deg) scale(1.2); }
+            100% { transform: translateY(150%) rotate(12deg) scale(1.2); }
+        }
+
+        .mercury-drips::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle at 50% 50%, 
+                rgba(255,255,255,0.15) 0%,
+                transparent 60%);
+            animation: mercury-pulse 4s ease-in-out infinite;
+        }
+
+        @keyframes mercury-pulse {
+            0%, 100% { opacity: 0.4; transform: scale(1); }
+            50% { opacity: 0.8; transform: scale(1.1); }
         }
 
         .logo-container {
             position: relative;
             z-index: 2;
             max-width: 80vw;
-            filter: drop-shadow(0 0 20px rgba(255,255,255,0.1));
+            filter: 
+                drop-shadow(0 0 15px rgba(255,255,255,0.15))
+                contrast(130%);
+            perspective: 1000px;
         }
 
         img {
             width: 100%;
             height: auto;
-            border: 2px solid rgba(255,255,255,0.1);
-            background: rgba(0,0,0,0.5);
-            padding: 20px;
+            border: 3px solid rgba(255,255,255,0.1);
+            background: rgba(0,0,0,0.4);
+            padding: 25px;
             position: relative;
+            transform-style: preserve-3d;
+            backdrop-filter: blur(8px);
         }
 
-        /* Chrome Liquid Effect */
-        img::after {
+        /* Liquid Chrome Effect */
+        img::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(
-                120deg,
-                rgba(255,255,255,0) 0%,
-                rgba(255,255,255,0.4) 50%,
-                rgba(255,255,255,0) 100%
-            );
-            animation: shine 5s infinite;
+            top: -5px;
+            left: -5px;
+            right: -5px;
+            bottom: -5px;
+            background: 
+                linear-gradient(
+                    45deg,
+                    rgba(255,255,255,0) 0%,
+                    rgba(255,255,255,0.5) 50%,
+                    rgba(255,255,255,0) 100%
+                ),
+                repeating-linear-gradient(
+                    -45deg,
+                    rgba(0,0,0,0.1) 0px,
+                    rgba(0,0,0,0.1) 2px,
+                    transparent 2px,
+                    transparent 4px
+                );
+            animation: metal-shine 6s linear infinite;
             mix-blend-mode: overlay;
+            z-index: -1;
         }
 
-        @keyframes shine {
-            0% { transform: translateX(-100%) skew(-20deg); }
-            100% { transform: translateX(100%) skew(-20deg); }
+        @keyframes metal-shine {
+            0% { transform: translateX(-150%) rotate(30deg); }
+            100% { transform: translateX(150%) rotate(30deg); }
         }
 
         .contact {
@@ -95,19 +143,44 @@
         }
 
         a {
-            color: rgba(255,255,255,0.8);
+            color: rgba(255,255,255,0.9);
             text-decoration: none;
             font-size: 1.2rem;
-            padding: 10px 25px;
-            border: 1px solid rgba(255,255,255,0.2);
-            background: rgba(0,0,0,0.3);
+            padding: 12px 30px;
+            border: 1px solid rgba(255,255,255,0.3);
+            background: rgba(0,0,0,0.25);
             transition: all 0.3s ease;
+            letter-spacing: 1.5px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        a::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                90deg,
+                transparent,
+                rgba(255,255,255,0.2),
+                transparent
+            );
+            animation: button-glow 3s infinite;
+        }
+
+        @keyframes button-glow {
+            0% { left: -100%; }
+            100% { left: 100%; }
         }
 
         a:hover {
-            background: rgba(255,255,255,0.9);
+            background: rgba(255,255,255,0.95);
             color: #000;
             border-color: transparent;
+            box-shadow: 0 0 20px rgba(255,255,255,0.3);
         }
     </style>
 </head>
@@ -115,7 +188,6 @@
     <div class="mercury-drips"></div>
     
     <div class="logo-container">
-        <!-- REPLACE WITH YOUR IMAGE URL -->
         <img src="https://raw.githubusercontent.com/AETHERLIVE/AETHERLIVE.GITHUB.AI/main/text-1739414566378.png" alt="ÆTHER">
     </div>
 
