--- a/index.html
+++ b/index.html
@@ -10,161 +10,67 @@
         }
 
         body {
-            background: #2a2a2a;
+            background: #ffffff;
             min-height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             font-family: 'Arial', sans-serif;
-            position: relative;
-            overflow: hidden;
-        }
-
-        /* Vivid Mercury Droplets */
-        .mercury-drips {
-            position: absolute;
-            width: 300%;
-            height: 400%;
-            animation: flow 15s linear infinite;
-            background: 
-                radial-gradient(circle at 10% 15%, 
-                    rgba(255,255,255,0.4) 0%, 
-                    transparent 30%),
-                radial-gradient(circle at 30% 40%, 
-                    rgba(230,230,230,0.35) 0%, 
-                    transparent 35%),
-                radial-gradient(circle at 70% 25%, 
-                    rgba(255,255,255,0.5) 0%, 
-                    transparent 40%),
-                linear-gradient(
-                    45deg,
-                    rgba(200,200,200,0.1) 0%,
-                    rgba(150,150,150,0.3) 50%,
-                    rgba(200,200,200,0.1) 100%
-                );
-            mask-image: 
-                radial-gradient(circle at 50% 50%, 
-                    black 15%,
-                    transparent 25%),
-                radial-gradient(circle at 80% 20%, 
-                    black 10%,
-                    transparent 20%),
-                linear-gradient(
-                    to bottom,
-                    transparent 30%,
-                    black 50%,
-                    transparent 70%
-                );
-            -webkit-mask-composite: source-in;
-            mask-composite: intersect;
-            filter: blur(1px) contrast(400%) brightness(1.5);
-            z-index: 1;
-            mix-blend-mode: screen;
-        }
-
-        @keyframes flow {
-            0% { transform: translateY(-150%) rotate(12deg) scale(1.1); }
-            100% { transform: translateY(150%) rotate(12deg) scale(1.1); }
-        }
-
-        .mercury-drips::after {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 50% 50%, 
-                rgba(255,255,255,0.3) 0%,
-                transparent 60%);
-            animation: mercury-pulse 3s ease-in-out infinite;
-        }
-
-        @keyframes mercury-pulse {
-            0%, 100% { opacity: 0.6; transform: scale(1); }
-            50% { opacity: 1; transform: scale(1.05); }
         }
 
         .logo-container {
+            max-width: 90vw;
+            margin: 2rem;
+            border: 4px solid #000;
+            padding: 2rem;
             position: relative;
-            z-index: 2;
-            max-width: 80vw;
-            filter: 
-                drop-shadow(0 0 25px rgba(255,255,255,0.2))
-                contrast(150%);
-            perspective: 800px;
+            box-shadow: 12px 12px 0 #e63946;
         }
 
         img {
             width: 100%;
             height: auto;
-            border: 4px solid rgba(255,255,255,0.2);
-            background: rgba(50,50,50,0.6);
-            padding: 25px;
-            position: relative;
-            transform-style: preserve-3d;
-            backdrop-filter: blur(6px);
-        }
-
-        /* Liquid Metal Effect */
-        img::before {
-            content: '';
-            position: absolute;
-            top: -5px;
-            left: -5px;
-            right: -5px;
-            bottom: -5px;
-            background: 
-                linear-gradient(
-                    45deg,
-                    rgba(255,255,255,0) 0%,
-                    rgba(255,255,255,0.7) 50%,
-                    rgba(255,255,255,0) 100%
-                ),
-                repeating-linear-gradient(
-                    -45deg,
-                    rgba(0,0,0,0.15) 0px,
-                    rgba(0,0,0,0.15) 2px,
-                    transparent 2px,
-                    transparent 4px
-                );
-            animation: metal-shine 4s linear infinite;
-            mix-blend-mode: overlay;
-            z-index: -1;
-        }
-
-        @keyframes metal-shine {
-            0% { transform: translateX(-150%) rotate(25deg); }
-            100% { transform: translateX(150%) rotate(25deg); }
+            display: block;
+            filter: contrast(120%);
         }
 
         .contact {
             position: fixed;
-            bottom: 40px;
-            z-index: 3;
+            bottom: 2rem;
+            text-align: center;
         }
 
         a {
-            color: rgba(255,255,255,0.95);
+            color: #000;
             text-decoration: none;
-            font-size: 1.3rem;
-            padding: 15px 35px;
-            border: 2px solid rgba(255,255,255,0.4);
-            background: rgba(40,40,40,0.6);
+            font-size: 1.2rem;
+            padding: 1rem 2rem;
+            border: 2px solid #000;
             transition: all 0.3s ease;
-            letter-spacing: 2px;
-            text-shadow: 0 0 10px rgba(255,255,255,0.3);
+            background: #fff;
         }
 
         a:hover {
-            background: rgba(255,255,255,0.95);
-            color: #2a2a2a;
-            border-color: transparent;
-            box-shadow: 0 0 25px rgba(255,255,255,0.4);
+            background: #000;
+            color: #fff;
+            transform: translate(4px, 4px);
+        }
+
+        @media (max-width: 768px) {
+            .logo-container {
+                box-shadow: 6px 6px 0 #e63946;
+                padding: 1rem;
+            }
+            
+            a {
+                font-size: 1rem;
+                padding: 0.8rem 1.5rem;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="mercury-drips"></div>
-    
     <div class="logo-container">
         <img src="https://raw.githubusercontent.com/AETHERLIVE/AETHERLIVE.GITHUB.AI/main/text-1739414566378.png" alt="ÆTHER">
     </div>
