--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
         .logo-container {
             max-width: 90vw;
-            margin: 2rem;
             border: 4px solid #000;
             padding: 2rem;
-            position: relative;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
             box-shadow: 12px 12px 0 #e63946;
         }
 
@@ -61,6 +62,7 @@
             .logo-container {
                 box-shadow: 6px 6px 0 #e63946;
                 padding: 1rem;
+                width: 95vw;
             }
             
             a {
